--- a/views/login.tt
+++ b/views/login.tt
@@ -1,64 +1,61 @@
-<div class="login__main-container col-md-4 col-md-offset-4">
-    
-    <div class="login__logo">
-        <img src="[% url.page %]/images/logo.svg">
-    </div>
-    
-    <form class="login__form" method="post" autocomplete="off">
-        <div class="login__head">
-            <h2 class="login__title">
-                Please sign in
-            </h2>
-        </div>
-        <div class="login__fields">
-            <div class="form-group">
-                
-                <div class="input">
-                    <label for="username">
-                        Email address
-                    </label>
-                    <input tabindex="1" type="email" name="username" id="username" class="form-control"
-                           placeholder="name@example.com" value="[% username %]">
-                </div>
-                
-                <div class="checkbox">
-                    <input tabindex="2" type="checkbox" name="remember_me" id="remember" [% IF username
-                           %]checked="checked" [% END %]
-                           class="[% IF username %]remember--checked[% END %] visually-hidden-opacity">
-                    <label for="remember">
-                        Remember email address
-                    </label>
-                </div>
-            
-            </div>
-            
-            <div class="form-group">
-                
-                <div class="input">
-                    <label for="password">
-                        Password
-                    </label>
-                    <input tabindex="3" type="password" name="password" id="password" class="form-control"
-                           placeholder="password">
-                </div>
-                
-                <a href="[% url.page %]/reset" class="link">Reset password</a>
-            
-            </div>
-        </div>
-        
-        <div class="login__btns"><button tabindex="4" type="submit" name="signin" class="btn btn-default">
-                <span>Sign in</span>
-            </button>
-        </div>
-        
-        <input type="hidden" name="csrf_token" value="[% csrf_token %]">
-    </form>
-    
-    [% UNLESS site.hide_account_request %]
-    <div class="login__request-container">
-        <a href="[% url.page %]/register" class="login__request">Request an account</a>
-    </div>
-    [% END %]
+<form class="login__form" method="post" autocomplete="off">
+  [% PROCESS snippets/message_center.tt %]
+  <div class="login__head">
+    <h2 class="login__title">
+      Please sign in
+    </h2>
+  </div>
+  <div class="login__fields">
+    [%
+    PROCESS fields/input.tt
+      id = "username"
+      name = "username"
+      value = username
+      label = "Email address"
+      placeholder = "name@example.com"
+      type = "email"
+      custom_classes = ""
+      is_html = 0
+      tabindex = 1
+      sub_field = "fields/sub/checkbox.tt"
+      sub_params = {
+        id => "remember"
+        name => "remember_me"
+        label => "Remember email address"
+        checked => username
+        tabindex => 2
+      };
 
+    PROCESS fields/password.tt
+      id = "password"
+      name = "password"
+      value = ""
+      label = "Password"
+      placeholder = ""
+      type = "password"
+      custom_classes = ""
+      is_html = 0
+      tabindex = 3
+      sub_field = "fields/sub/link.tt"
+      sub_params = {
+        link => "/reset"
+        label => "Reset password"
+      };
+    
+    %]
+  </div>
+  
+  <div class="login__btns">
+    <button tabindex="4" type="submit" name="signin" value="1" class="btn btn-default">
+      <span>Sign in</span>
+    </button>
+  </div>
+  
+  <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+</form>
+
+[% UNLESS site.hide_account_request %]
+<div class="login__request-container">
+  <a href="[% url.page %]/register" class="login__request">Request an account</a>
 </div>
+[% END %]
