--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -187,7 +187,7 @@
         [% IF page.match('(view|layout)') %]
             <script type="text/javascript" src="[% url.js %]/query-builder.standalone.js"></script>
         [% END %]
-        [% IF page.match('(view|edit|layout|bulk|data)') %]
+        [% IF page.match('(view|edit|layout|bulk|data|audit)') %]
             <script type="text/javascript" src="[% url.js %]/bootstrap3-typeahead.min.js"></script>
         [% END %]
         [% IF page == "data_calendar" %]
