--- a/views/snippets/navigation.tt
+++ b/views/snippets/navigation.tt
@@ -2,7 +2,7 @@
   <div class="sidebar__container">
     <div class="sidebar__header">
       <div class="sidebar__logo">
-        <img src="[% url.page %]/images/logo.svg"/>
+        <img src="[% url.page %]/images/logo_linkspace.svg"/>
       </div>
       <button type="button" class="sidebar__toggle btn btn-default">
         <span>Hide menu</span>
@@ -12,7 +12,7 @@
       <div class="sidebar__nav">
         <ul class="nav flex-column">
           <li class="nav__item">
-            <a class="nav__link nav__link--dashboard" href="/">
+            <a class="nav__link nav__link--dashboard" href="[% url.page %]/">
               <span>Dashboard</span>
             </a>
           </li>
@@ -39,7 +39,7 @@
           </li>
           [% IF user.permission.superadmin %]
           <li class="nav__item">
-            <a class="nav__link nav__link--settings" href="[% url.page %]/system/"><span>Settings</span></a>
+            <a class="nav__link nav__link--settings" href="[% url.page %]/system/"><span>Admin Settings</span></a>
           </li>
           [% END %]
         </ul>
