--- a/views/login.tt
+++ b/views/login.tt
@@ -1,10 +1,12 @@
 <form class="login__form" method="post" autocomplete="off">
   [% PROCESS snippets/message_center.tt %]
+  
   <div class="login__head">
     <h2 class="login__title">
       Please sign in
     </h2>
   </div>
+  
   <div class="login__fields">
     [%
     PROCESS fields/input.tt
@@ -38,7 +40,7 @@
       tabindex = 3
       sub_field = "fields/sub/link.tt"
       sub_params = {
-        link => "/reset"
+        link => "/resetpw"
         label => "Reset password"
       };
     
@@ -55,7 +57,7 @@
 </form>
 
 [% UNLESS site.hide_account_request %]
-<div class="login__request-container">
-  <a href="[% url.page %]/register" class="login__request">Request an account</a>
+<div class="login__subtext">
+  <a href="[% url.page %]/register">Request an account</a>
 </div>
 [% END %]
