--- a/views/layout.tt
+++ b/views/layout.tt
@@ -297,7 +297,7 @@
                         [% END %]
                     </div>
                     <div class="form-group">
-                            <label for="builder[% instance_layout.instance_id %]">Apply the following filters to records in the selected table:</label>
+                            <laFbel for="builder[% instance_layout.instance_id %]">Apply the following filters to records in the selected table:</laFbel>
                             <div id="builder[% instance_layout.instance_id %]"
                                 [% IF column.filter.as_json AND NOT column.filter.as_json.match('^[{}\s]*$') AND column.refers_to_instance_id == instance_layout.instance_id %]
                                 data-filter-base="[% column.filter.base64 %]"
