Fix a bug where errors where not displayed in message center

--- a/views/snippets/message_center.tt
+++ b/views/snippets/message_center.tt
@@ -1,4 +1,4 @@
-[% IF messages.size OR session.rewind %]
+[% IF messages.size OR session.rewind OR error %]
 <div class="login__alert">
   [% IF messages.size %]
     [% FOR message IN messages %]
