--- a/views/fields/input.tt
+++ b/views/fields/input.tt
@@ -16,9 +16,10 @@
       id="[% id %]"
       name="[% name %]"
       placeholder="[% IF is_html %][% placeholder | html %][% ELSE %][% placeholder %][% END %]"
-      value="[% value %]"
+      value="[% IF is_html; value | html; ELSE; value; END; %]"
       [% IF tabindex %]tabindex="[% tabindex %]"[% END %]
       [% IF help_text %]aria-describedby="[% id %]-help"[% END %]
+      [% IF is_disabled %]disabled[% END %]
     >
   </div>
   [% PROCESS snippets/subfield.tt %]
