--- a/views/fields/password.tt
+++ b/views/fields/password.tt
@@ -19,6 +19,7 @@
       value="[% value %]"
       [% IF tabindex %]tabindex="[% tabindex %]"[% END %]
       [% IF help_text %]aria-describedby="[% id %]-help"[% END %]
+      [% IF is_disabled %]disabled[% END %]
     >
   </div>
   [% PROCESS snippets/subfield.tt %]
